tests/baselines/reference/assignmentLHSIsValue.errors.txt
==== tests/cases/conformance/expressions/assignmentOperator/assignmentLHSIsValue.ts (40 errors) ====
    // expected error for all the LHS of assignments
    var value;
    
    // this
    class C {
        constructor() { this = value; }
                        ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        foo() { this = value; }
                ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        static sfoo() { this = value; }
                        ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    }
    
    function foo() { this = value; }
                     ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    this = value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // identifiers: module, class, enum, function
    module M { export var a; }
    M = value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    C = value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    enum E { }
    E = value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    foo = value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // literals
    null = value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    true = value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    false = value;
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    0 = value;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    '' = value;
    ~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    /d+/ = value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // object literals
    { a: 0} = value;
            ~
!!! error TS1128: Declaration or statement expected.
    
    // array literals
    ['', ''] = value;
    ~~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // super
    class Derived extends C {
        constructor() { super(); super = value; }
                                       ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
                                 ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
        foo() { super = value }
                      ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
                ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
        static sfoo() { super = value; }
                              ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
                        ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    }
    
    // function expression
    function bar() { } = value;
                       ~
!!! error TS1128: Declaration or statement expected.
    () => { } = value;
              ~
!!! error TS1005: ';' expected.
    
    // function calls
    foo() = value;
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    // parentheses, the containted expression is value
    (this) = value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (M) = value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (C) = value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (E) = value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (foo) = value;
    ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (null) = value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (true) = value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (0) = value;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    ('') = value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (/d+/) = value;
    ~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    ({}) = value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    ([]) = value;
    ~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (function baz() { }) = value;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    (foo()) = value;
    ~~~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.